src/objects/Client_Program_Year__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>CASESAFEID(Client_Program__r.Account__r.Id)</formula>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Owner_ID__c</fullName>
        <formula>Client_Program__r.Account__r.Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For conga</inlineHelpText>
        <label>Account Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accrual_Actual_Delta__c</fullName>
        <formula>IF(Total_Hours_Accrued_to_Date__c=0,0,(Total_Flown_Hours__c / Total_Hours_Accrued_to_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hours flown divided by hour accrued to date. Closer to 100% the better</inlineHelpText>
        <label>Accrual/Actual Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accrual_Actual_Delta_days__c</fullName>
        <formula>IF(Total_Days_Accrued_to_Date__c=0,0,(Total_Flown_Hours__c / Total_Days_Accrued_to_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accrual/Actual Delta (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accrual_Per_Day_Day_Program__c</fullName>
        <formula>Annual_Days_Allotted__c /(( End_Date__c - Start_Date__c )+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accrual Per Day (Day Program)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accrual_per_Day__c</fullName>
        <formula>Annual_Hours_Allotted__c /((  End_Date__c  - Start_Date__c )+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accrual per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Amount_Remaining__c</fullName>
        <formula>Total_Deposit_Amount__c -  Total_Flown_Flight_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Deposit Amount-Flight Spend</inlineHelpText>
        <label>Actual Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Deposit_Hours_Remaining__c</fullName>
        <formula>Actual_Amount_Remaining__c  /  Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Deposit Hours Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Hours_Remaining__c</fullName>
        <formula>Contract_Hours_Calculation__c  -  Total_Billed_Hours__c</formula>
        <inlineHelpText>Contract Hours Calculation minus Total Billed Hours</inlineHelpText>
        <label>Actual Hours Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allotted_plus_prior_yr_carry_over__c</fullName>
        <formula>Annual_Hours_Allotted__c + Prior_Year_Carry_Over__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allotted plus prior yr carry over</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Days_Allotted__c</fullName>
        <label>Annual Days Allotted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Hours_Allotted__c</fullName>
        <inlineHelpText>Allotted hours for this program year</inlineHelpText>
        <label>Annual Hours Allotted</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Hours_Remaining__c</fullName>
        <formula>Annual_Hours_Allotted__c - Total_Flown_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Close__c</fullName>
        <label>Auto Close</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auto_renew_notification_date__c</fullName>
        <formula>End_Date__c -  Client_Program__r.Operator_Program__r.Days_notice_required_before_auto_renew__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field goes into the operator program and checks how many days prior the client has to give notice not to auto-renew (e.g. 30 days). Then it subtracts that number from the contract end date. To be used for client alerts</inlineHelpText>
        <label>Auto-renew notification date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Balance_Update_Ready_to_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field for Conga Conductor</inlineHelpText>
        <label>Balance Update Ready to Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance_as_of_Last_Statement__c</fullName>
        <formula>(Actual_Amount_Remaining__c + Total_Flown_not_Reconciled_Est_Cost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual Amount Remaining + Total Flown NOT Reconciled Estimated Cost</inlineHelpText>
        <label>Balance as of Last Statement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_Booked_Hours__c</fullName>
        <formula>Booked_Hours__c + Total_Billed_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billed + Booked Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Hours__c</fullName>
        <label>Bonus Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booked_Hours__c</fullName>
        <label>Booked Hours</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Borrow_able_hours_this_year__c</fullName>
        <inlineHelpText>Need this field for fractional summary report</inlineHelpText>
        <label>Borrow-able hours this year</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Program Year</relationshipLabel>
        <relationshipName>CO_Client_Program_Year</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CONGA_Jet_Card_Hours_Remaining__c</fullName>
        <description>##Conga created btn:00b0P000000iOwE</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[LatestBookedFlightCu]00O0P000003TRjZ,[ProgramNameJetCard]00O0P000003TVkZ?pv0=&quot; + Account_Name__c + &quot;~pv1=&quot; + Id + &quot;,[GoesByCongaJetCard]00O0P000003TVke?pv0=&quot; + Client_Program__c +
&quot;&amp;congaemailtemplateid=a1E0P00000Y1GRt&quot; + 
&quot;&amp;schp=1&quot; + 
&quot;&amp;emailtoid=003U0000008fmOx&quot; + 
&quot;&amp;emailadditionalto=michelle@aviationportfolio.com;luke@aviationportfolio.com&quot; +
&quot;&amp;emailcc=taylor@aviationportfolio.com&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>CONGA Jet Card Hours Remaining</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charter_Program_Deposit_Amount__c</fullName>
        <description>This is not for initial program deposit- it is for additional deposits only.</description>
        <label>Charter Program Deposit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charter_Program_Deposit_Date__c</fullName>
        <inlineHelpText>Additional deposits - not the first deposit.</inlineHelpText>
        <label>Charter Program Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Aware_of_Term_End_or_Low_Balance__c</fullName>
        <label>Client Aware of Term End or Low Balance?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, client is aware but does not wish to take action</fullName>
                </value>
                <value>
                    <fullName>Yes, client is aware and made/will make additional purchase</fullName>
                </value>
                <value>
                    <fullName>Yes, client is aware and plans to catch up before terms end</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Program__c</fullName>
        <label>Client Program</label>
        <referenceTo>Client_Program__c</referenceTo>
        <relationshipName>Client_Program_Years</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Program Year</relationshipLabel>
        <relationshipName>CO_Client_Program_Year</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Client Program Year</relationshipLabel>
        <relationshipName>CO_Client_Program_Year</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Conga_Workflow_Frax_Hours_remaining__c</fullName>
        <description>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[LatestBooked]00O0P000003TRjZ,[ProgramName]00O0P000003TRjt?pv0=&quot; + Account_Name__c + &quot;~pv1=&quot; + Id + &quot;,[GoesByConga]00O0P000003TTew?pv0=&quot; + Client_Program__c +
&quot;&amp;CongaEmailTemplateId=a1E0P00000Y1FmU&quot; + 
&quot;&amp;schp=1&quot; + 
&quot;&amp;emailtoid=003U0000008fmOx&quot; + 
&quot;&amp;emailadditionalto=michelle@aviationportfolio.com;luke@aviationportfolio.com&quot; + 
&quot;&amp;emailcc=taylor@aviationportfolio.com&quot; + 
&quot;&amp;qmode=SendEmail&quot;</description>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[LatestBooked]00O0P000003TRjZ,[ProgramName]00O0P000003TRjt?pv0=&quot; + Account_Name__c + &quot;~pv1=&quot; + Id + &quot;,[GoesByConga]00O0P000003TTew?pv0=&quot; + Client_Program__c +
&quot;&amp;CongaEmailTemplateId=a1E0P00000JCaS8&quot; + 
&quot;&amp;schp=1&quot; + 
&quot;&amp;emailtoid=003U0000008fmOx&quot; + 
&quot;&amp;emailadditionalto=michelle@aviationportfolio.com;luke@aviationportfolio.com&quot; + 
&quot;&amp;emailcc=taylor@aviationportfolio.com&quot; +
&quot;&amp;UF0=1&quot; +
&quot;&amp;MFTS0=Balance_Update_Ready_to_Send__c&quot; +
&quot;&amp;MFTSValue0=False&quot; +
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Workflow Frax Hours remaining</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Hours_Calculation__c</fullName>
        <formula>IF(ISBLANK(Total_Permitted_Annual_Hours__c),Annual_Hours_Allotted__c + Prior_Year_Carry_Over__c,IF((Annual_Hours_Allotted__c + Prior_Year_Carry_Over__c)&gt; Total_Permitted_Annual_Hours__c ,Total_Permitted_Annual_Hours__c,Annual_Hours_Allotted__c + Prior_Year_Carry_Over__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual allotted hours PLUS prior year carry-over NOT TO EXCEED annual max threshold</inlineHelpText>
        <label>Contract Hours Calculation</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Annual_Trend__c</fullName>
        <formula>(Total_Flown_Hours__c  / Days_into_Program_Year__c) * 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Flown Hours/Days into Program Year x 365</inlineHelpText>
        <label>Current Annual Trend</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Yr_MMF_per_Hour__c</fullName>
        <formula>Latest_MMF__c *12/ Client_Program__r.Annual_Hours_Contracted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Yr MMF per Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_into_Program_Year__c</fullName>
        <formula>IF(End_Date__c &lt; TODAY (),End_Date__c - Start_Date__c, TODAY () - Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days into Program Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Billed_Tentative_Days__c</fullName>
        <label>Estimated Billed + Tentative Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FJ_95__c</fullName>
        <formula>Annual_Hours_Allotted__c  *0.05</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For FlexJet Only.  Charter Threshold.  Annual Allotted Hours*5%</inlineHelpText>
        <label>FJ 95%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FJ_Total_Charter_Reconciled_Hours__c</fullName>
        <label>FJ Total Charter Reconciled Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flown_Credited__c</fullName>
        <formula>Total_Flown_Hours__c + Total_Credited_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flown + Credited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount_Remaining__c</fullName>
        <formula>Total_Deposit_Amount__c -  Total_Flown_Flight_Spend__c  -  Total_Estimated_Flight_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Card_Hours_Remaining__c</fullName>
        <formula>Total_Hours__c - Total_Forecasted_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Hours - Total Flown and Estimated Hours</inlineHelpText>
        <label>Forecasted CARD Hours Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Deposit_Hours_Remaining__c</fullName>
        <formula>Forecast_Amount_Remaining__c  /  Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Forecasted Amount Remaining/Hourly Rate</inlineHelpText>
        <label>Forecasted Deposit Hours Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Hours_Remaining__c</fullName>
        <formula>Contract_Hours_Calculation__c  - Total_Forecasted_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Hours Calculation minus total forecasted hours (billed plus booked and tentative)</inlineHelpText>
        <label>Forecasted Hours Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Utilized__c</fullName>
        <formula>Total_Forecasted_Hours__c / Annual_Hours_Allotted__c</formula>
        <inlineHelpText>Total Forecasted Hours(Billed hours plus booked and tentative)/Annual Hours Allotted</inlineHelpText>
        <label>Forecasted % Utilized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecasted_Utlizied_Card__c</fullName>
        <formula>Total_Forecasted_Hours__c /  Purchased_Hours__c</formula>
        <inlineHelpText>Total Forecasted Hours /  Purchased_Hours</inlineHelpText>
        <label>Forecasted % Utilized Cards Only</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Funds_Deposit_Date__c</fullName>
        <inlineHelpText>For Wheels Up and XOJet to Track Deposit Date.  Start date for these two programs is the date of the first flight.</inlineHelpText>
        <label>Funds Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JetCard_Dollars_Remaining_Lightning__c</fullName>
        <description>##Conga created button:00b0P000000iVIw</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[ProgramName]a1F0P000007GeZS,[GoesBy]a1F0P000007GeZX,[Aircraft]a1F0P000007GqqH,[LatestBooked]a1F0P000007GejI&quot; + 
&quot;&amp;congaemailtemplateid=a1E0P00000Y1GRo&quot; + 
&quot;&amp;emailtoid=003U0000008fmOx&quot; + 
&quot;&amp;schp=1&quot; + 
&quot;&amp;emailadditionalto=Luke@Aviationportfolio.com,Michelle@Aviationportfolio.com&quot; + 
&quot;&amp;emailcc=Taylor@AviationPortfolio.com, Sam@AviationPortfolio.com&quot; + 
&quot;&amp;uf0=1&quot; + 
&quot;&amp;mfts0=Balance_Update_Ready_to_Send__c&quot; + 
&quot;&amp;mftsvalue0=FALSE&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>JetCard Dollars Remaining Lightning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jet_Card_Dollars_Remaining__c</fullName>
        <description>##Conga created btn:00b0P000000iPB9
##Conga updated btn:00b0P000000iPB9
##Conga updated button:00b0P000000iPB9</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[ProgramName]00O0P000003TVkZ?pv0=&quot; + Account_Name__c + &quot;~pv1=&quot; + Id + &quot;,[goesbyjetcard]00O0P000003TVke?pv0=&quot; + Client_Program__c + &quot;,[LatestBooked]00O0P000003TRjZ&quot; + 
&quot;&amp;congaemailtemplateid=a1E0P00000Y1GRo&quot; + 
&quot;&amp;emailtoid=003U0000008fmOx&quot; + 
&quot;&amp;schp=1&quot; + 
&quot;&amp;emailadditionalto=Luke@Aviationportfolio.com,Michelle@Aviationportfolio.com&quot; + 
&quot;&amp;emailcc=taylor@aviationportfolio.com&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>CONGA Jet Card Dollars Remaining</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jet_Card_Hours_Remaining__c</fullName>
        <description>##Conga created button:00b0P000000iOwE</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[ProgramName]a1F0P000007GeZS,[LatestBooked]a1F0P000007GejI&quot; + 
&quot;&amp;congaemailtemplateid=a1E0P00000JCaIy&quot; + 
&quot;&amp;schp=1&quot; + 
&quot;&amp;emailtoid=003U0000008fmOx&quot; + 
&quot;&amp;emailcc=Taylor@AviationPortfolio.com&quot; + 
&quot;&amp;emailadditionalto=Craig@AviationPortfolio.com,Luke@AviationPortfolio.com,Michelle@AviationPortfolio.com&quot; + 
&quot;&amp;uf0=1&quot; + 
&quot;&amp;mfts0=Balance_Update_Ready_to_Send__c&quot; + 
&quot;&amp;mftsvalue0=FALSE&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>Jet Card Hours Remaining</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>King_Air_Hourly_Rate__c</fullName>
        <label>King Air Hourly Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Large_Cabin_Hourly_Rate__c</fullName>
        <label>Large Cabin Hourly Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Statement_Reconciled_Remaining_Hour__c</fullName>
        <formula>Contract_Hours_Calculation__c - Reconciled_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FLEX-Contract Hours Calc - Reconciled Hours (Should match Remaining Hours on Statement)
NJ- Remaining Hours Avail- Add&apos;l Hours</inlineHelpText>
        <label>Last Statement Reconciled Remaining Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_MMF__c</fullName>
        <inlineHelpText>Grabs the MMF amount from the last reconciled expense record</inlineHelpText>
        <label>Latest MMF</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Payments_Made__c</fullName>
        <label>Lease Payments Made</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_1_Overage_OHF_Hourly_Rate__c</fullName>
        <label>Level 1 Overage OHF Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_1_to_Level_2_Trigger_Level__c</fullName>
        <inlineHelpText>(usually 25% over annual permitted)</inlineHelpText>
        <label>Level 1 to Level 2 Trigger Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_2_Overage_OHF_Hourly_Rate__c</fullName>
        <label>Level 2 Overage OHF Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LightCabin_Hourly_Rate__c</fullName>
        <label>Light Cabin Hourly Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMF_Accrued_to_Date__c</fullName>
        <formula>IF(  End_Date__c &gt; TODAY(),

MMF_Paid__c -

((-(DATE(year( TODAY() ),month(TODAY()),1) - DATE(year( TODAY() ),(month(TODAY() )+1),1))
- DAY(TODAY())) * (  Latest_MMF__c  /365)),

 MMF_Paid__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total MMF to be paid for entire program year divided into a daily number and multiplied by number of days into program year</inlineHelpText>
        <label>MMF Accrued to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMF_Paid__c</fullName>
        <label>MMF Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Membership_Bonus__c</fullName>
        <label>Membership Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Membership_Deposit__c</fullName>
        <label>Membership Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mid_Cabin_Houly_Rate__c</fullName>
        <label>Mid Cabin Hourly Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_1_Hours_Remaining__c</fullName>
        <formula>(Contract_Hours_Calculation__c  *  Owner_1_Split_Share__c)- Reconciled_Hours_Lead_Pax_1__c</formula>
        <inlineHelpText>(Contract Hours Calcuation*Owner 1 Split Share %)-Owner 1 Reconciled Hours</inlineHelpText>
        <label>Owner 1 Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_1_Max_Threshold__c</fullName>
        <label>Owner 1 Max Threshold</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_1_Split_Share__c</fullName>
        <label>Owner 1 Split Share %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner_2_Hours_Remaining__c</fullName>
        <formula>(Contract_Hours_Calculation__c  * Owner_2_Split_Share__c)- Reconciled_Hours_Owner_2_Lead_Pax__c</formula>
        <label>Owner 2 Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_2_Max_Threshold__c</fullName>
        <formula>Total_Permitted_Annual_Hours__c -  Owner_1_Max_Threshold__c -  Owner_3_Max_Threshold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner 2 Max Threshold</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_2_Split_Share__c</fullName>
        <label>Owner 2 Split Share %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner_3_Hours_Remaining__c</fullName>
        <formula>(Contract_Hours_Calculation__c* Owner_3_Split_Share__c)- Reconciled_Hours_Owner_3_Lead_Pax__c</formula>
        <label>Owner 3 Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_3_Max_Threshold__c</fullName>
        <label>Owner 3 Max Threshold</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_3_Split_Share__c</fullName>
        <label>Owner 3 Split Share %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCE_Definition_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Definition Lookup</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipLabel>Client Program Year</relationshipLabel>
        <relationshipName>CO_Client_Program_Year</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCE_Definition__c</fullName>
        <label>Definition</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Utilized__c</fullName>
        <formula>Total_Flown_Hours__c / Annual_Hours_Allotted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Utilized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pre_IR_Hours_Flown__c</fullName>
        <inlineHelpText>Actual Hours Flown Prior to Exchange Rate (Reconciled Only)</inlineHelpText>
        <label>Pre Exchange Rate Hours Flown</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Program_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prior Program Year</label>
        <referenceTo>Client_Program_Year__c</referenceTo>
        <relationshipName>Program_Years</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Carry_Over__c</fullName>
        <inlineHelpText>Remaining hours from last year to be added to this year&apos;s allotment OR borrowed hours being taken out of this year</inlineHelpText>
        <label>Prior Year Carry-Over</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Initiated__c</fullName>
        <label>Process Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Program_Name_Date__c</fullName>
        <formula>Client_Program__r.Name + &quot; Expiration: &quot; +  TEXT(End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Period_Note__c</fullName>
        <label>Program Period Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program_Year__c</fullName>
        <label>Program Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchased_Hours__c</fullName>
        <label>Purchased Hours</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reconciled_Hours_Lead_Pax_1__c</fullName>
        <label>Reconciled Hours Owner 1 Lead Pax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reconciled_Hours_Owner_2_Lead_Pax__c</fullName>
        <label>Reconciled Hours Owner 2 Lead Pax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reconciled_Hours_Owner_3_Lead_Pax__c</fullName>
        <label>Reconciled Hours Owner 3 Lead Pax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reconciled_Hours__c</fullName>
        <label>Reconciled Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring_Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Business Process</label>
        <referenceTo>FSTR__Recurring_Business_Process__c</referenceTo>
        <relationshipLabel>Client Program Year</relationshipLabel>
        <relationshipName>CO_Client_Program_Year</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Hours_Billed_Booked__c</fullName>
        <formula>Contract_Hours_Calculation__c - Billed_Booked_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Hours (Billed+ Booked)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skipped_Steps__c</fullName>
        <label>Skipped Steps</label>
        <length>32728</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Term_Expiration_Date_Detail__c</fullName>
        <label>Special Term Expiration Date Detail</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Guaranteed Availability</fullName>
                </value>
                <value>
                    <fullName>Peak Day</fullName>
                </value>
                <value>
                    <fullName>Hourly Rate Increase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Terms_Expiration_Date__c</fullName>
        <label>Special Terms Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuperMid_Cabin_Hourly_Rate__c</fullName>
        <label>Super-Mid Cabin Hourly Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Billed_Days__c</fullName>
        <label>Total Billed Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>